# lecturer

./: README.md  pyproject.toml
lecturer/: __init__.py  __main__.py
