[tool.poetry]
name = "lecturer"
version = "0.1.0"
description = ""
authors = ["Sergey Kirichenko <whole-white-whale@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
fire = "^0.6.0"
langchain-community = "^0.2.11"
langchain-core = "^0.2.29"
python = "^3.12"

[tool.poetry.scripts]
lecturer = "lecturer.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
